--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
 		var data = [
 			{lat:51.5, lon:-0.09, value:150},
-			{lat: 51.508, lon: -0.11, value: 200 },
-			{lat: 51.503, lon: -0.06, value: 100 },
-			{lat: 51.509, lon: -0.08, value: 300 },
-			{lat: 51.485, lon: -0.12, value: 220 },
-			{lat: 51.501, lon: -0.10, value: 120 }
+			// {lat: 51.508, lon: -0.11, value: 200 },
+			// {lat: 51.503, lon: -0.06, value: 100 },
+			// {lat: 51.509, lon: -0.08, value: 300 },
+			// {lat: 51.485, lon: -0.12, value: 220 },
+			// {lat: 51.501, lon: -0.10, value: 120 }
 		];
 
 		var il = L.isometricLayer(data).addTo(map);
